# autonomos-platform

./: .dockerignore  .env.example  .env.preview.example  .env.sample  .gitignore  .replit  AAM_DASHBOARD_GUIDE.md  AAM_HYBRID_DISCONNECTION_HISTORY.md  AGENTIC_PLATFORM_PLAN.md  AOS_Trifecta_Agent_Prompts_v3.docx  ARCHITECTURE.md  ARCHIVE_LOG.md  AUTONOMOUS_EXECUTION_SUMMARY.md  BACKEND_BLOCKING_FIX_SUMMARY.md  CEO_DEMO_CONTROL_PANEL.md  CLAUDE.md  COFA_TRUTH_TEST_REPORT.md  COLOR_PALETTE.md  CRITICAL_TODOS.md  DCL_DEV_MODE_INVESTIGATION.md  DCL_REMOVAL_ASSESSMENT.md  DCL_USAGE_GUIDE.md  DEPLOYMENT_OPTIMIZATIONS.md  DEPLOYMENT_POLICY.md  DISCOVERY_DEMO_ENTERPRISE_UPGRADE.md  DOCUMENTATION_INDEX.md  ENV_VARIABLES_COMPLETE.md  FRONTEND-BACKUP-LOCATION.txt  GPU_DEPENDENCY_ANALYSIS.md  Makefile  PHASE2_REFACTORING_COMPLETE.md  PIPELINE_DEMO_SUMMARY.txt  PLAN.md  PREVIEW_DEPLOYMENT_GUIDE.md  PROVENANCE_FIX_SUMMARY.md  QUICK_START_END_TO_END.md  RACI_MATRIX.md  README.md  REMEDIATION_PLAN.md  SECURITY.md  (+41 more)
.claude/: settings.local.json
DASHBOARD/: AGENTIC_ORCHESTRATION_DASHBOARD.md
DESIGNER_TRANSFER/: DiscoveryDemo_Standalone.tsx  README.md
ONGOING PROMPTS/: AOS_COMPREHENSIVE_CLAUDE.md  USER_GUIDE (1).md
ONGOING_PROMPTS/: AOA_Canonical_Blueprint_v2.docx  AOA_Gap_Assessment_v1.md  AOS_COMPREHENSIVE_CLAUDEv2.md  AOS_MASTER_RACIv5.xlsx  AOS_MASTER_RACIv6.csv  AOS_MASTER_RACIv7.csv  AOS_Trifecta_Agent_Prompts_v2.docx  AOS_Trifecta_Agent_Prompts_v3.md  maestra_platform_spec_v7.1.docx.txt
RACIs/: FINAL_CONSOL_RACI.MD  aoa-monitoring-ui-handoff.md
aam-hybrid/: .env.example  AAM_FULL_CONTEXT.md  README.md  docker-compose.yml  ingest_demo_data.py  requirements.txt  test_health.sh  test_repair_agent.py
aam_gauntlet/: README.md  docker-compose.yml  requirements.txt  start.sh  start_services.sh
aam_hybrid/: .env.example  AAM_FULL_CONTEXT.md  CONFIGURATION_GUIDE.md  README.md  __init__.py  ingest_demo_data.py  test_onboarding.sh  test_repair_agent.py
alembic/: env.py
aos-overview-template/: README.md  index.html  package.json  tailwind.config.js  vite.config.ts
app/: __init__.py  config.py  crud.py  database.py  main.py  models.py  nlp_simple.py  schemas.py  security.py  worker.py
attached_assets/: AOS_GLOSSARY_1764245771922.md  API_INTEGRATION_1763565251664.md  Pasted--I-m-especially-curious-about-Does-the-core-problem-and-solution-make-sense-Is-it-clear-from--1761681851564_1761681851564.txt  Pasted--Replit-MAX-Prompt-Add-Live-Mermaid-Diagrams-at-diagrams-Goal-Render-Mermaid-diagrams-inside--1761999249321_1761999249322.txt  Pasted--sanity-branch-uncommitted-files-git-status-git-rev-parse-abbrev-ref-HEAD-tests-actua-1762231724214_1762231724215.txt  Pasted-1-One-slide-platform-story-layers-what-it-does-init-theme-neutral-flowchart-TB--1762020371980_1762020371981.txt  Pasted-1-Replit-MAX-READ-ONLY-DIAGNOSTIC-no-code-changes-You-are-in-READ-ONLY-mode-Do-NOT-modify-code-1762907797062_1762907797063.txt  Pasted-2025-11-12-18-42-33-13-8e14c21e-User-Error-in-polling-loop-psycopg-OperationalError-connection-1763001825057_1763001825058.txt  Pasted-2025-11-12-18-54-43-44-8e14c21e-User-host-ep-lively-lake-aed39pxg-c-2-us-east-2-aws-neon-tech-1763002541340_1763002541340.txt  Pasted-Agent-I-reject-the-recommendation-to-skip-the-test-Option-A-We-do-not-cut-corners-100-integrat-1763497704921_1763497704922.txt  Pasted-Goal-Completely-remove-the-legacy-DCL-Data-Connectivity_1764792259367.txt  (+79 more)
frontend/: README.md  (+7 more)
(+2039 files in other folders)
