[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autonomos-platform"
version = "0.1.0"
description = "AutonomOS - Intelligent Multi-Tenant Data Platform with AAM Hybrid"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "AutonomOS Team"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    # Core FastAPI and server
    "fastapi==0.119.0",
    "uvicorn[standard]==0.37.0",

    # Database
    "sqlalchemy",
    "psycopg2-binary",
    "alembic",
    "pgvector==0.3.6",

    # Background jobs
    "redis",
    "rq",

    # Data validation
    "pydantic",
    "pydantic-settings",
    "pydantic[email]",

    # Utilities
    "python-dotenv",
    "httpx",
    "python-multipart",
    "pyyaml",
    "pandas",
    "duckdb>=1.0.0",

    # Auth
    "passlib[argon2]",
    "python-jose[cryptography]",

    # AI/ML
    "sentence-transformers==3.3.1",
    "google-generativeai==0.8.5",
    "openai",
    "pinecone>=7.0.0",
    "rank-bm25==0.2.2",

    # NLP/PII
    "presidio-analyzer==2.2.355",
    "presidio-anonymizer==2.2.355",

    # Database connectors
    "pymongo",
    "psycopg[async]",
    "requests",
    "psycopg-binary",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
]

[tool.setuptools]
packages = ["app", "aam_hybrid", "services", "scripts"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.json", "*.md", "*.txt"]

[project.scripts]
autonomos-server = "app.main:main"
